<?xml version="1.0"?>
<package format="2">
  <name>carto</name>
  <version>0.1.1</version>
  <description>ROS package suite for Raspberry Pi Mouse Simulator</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="tvc@example.com">Yuki Watanabe</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cartographer</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
